[gd_scene format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/player1/idle1.png" id="2_p1"]
[ext_resource type="Texture2D" path="res://assets/player2/idle1.png" id="3_p2"]
[ext_resource type="Texture2D" path="res://assets/player3/idle1.png" id="4_p3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="StartPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="StartPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CHAIN TOGETHER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="StartPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StartButton" type="Button" parent="StartPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "START"

[node name="SelectionPanel" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SelectTitle" type="Label" parent="SelectionPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SELECT CHARACTERS"
horizontal_alignment = 1

[node name="PlayersContainer" type="HBoxContainer" parent="SelectionPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="Player1Selection" type="VBoxContainer" parent="SelectionPanel/PlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="SelectionPanel/PlayersContainer/Player1Selection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PLAYER 1 (WASD)"
horizontal_alignment = 1

[node name="Preview" type="TextureRect" parent="SelectionPanel/PlayersContainer/Player1Selection"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_p1")
expand_mode = 1
stretch_mode = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="SelectionPanel/PlayersContainer/Player1Selection"]
layout_mode = 2
alignment = 1

[node name="Style1" type="Button" parent="SelectionPanel/PlayersContainer/Player1Selection/ButtonsContainer"]
toggle_mode = true
button_pressed = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 1"

[node name="Style2" type="Button" parent="SelectionPanel/PlayersContainer/Player1Selection/ButtonsContainer"]
toggle_mode = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 2"

[node name="Style3" type="Button" parent="SelectionPanel/PlayersContainer/Player1Selection/ButtonsContainer"]
toggle_mode = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 3"

[node name="Player2Selection" type="VBoxContainer" parent="SelectionPanel/PlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="SelectionPanel/PlayersContainer/Player2Selection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PLAYER 2 (ARROWS)"
horizontal_alignment = 1

[node name="Preview" type="TextureRect" parent="SelectionPanel/PlayersContainer/Player2Selection"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_p1")
expand_mode = 1
stretch_mode = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="SelectionPanel/PlayersContainer/Player2Selection"]
layout_mode = 2
alignment = 1

[node name="Style1" type="Button" parent="SelectionPanel/PlayersContainer/Player2Selection/ButtonsContainer"]
toggle_mode = true
button_pressed = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 1"

[node name="Style2" type="Button" parent="SelectionPanel/PlayersContainer/Player2Selection/ButtonsContainer"]
toggle_mode = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 2"

[node name="Style3" type="Button" parent="SelectionPanel/PlayersContainer/Player2Selection/ButtonsContainer"]
toggle_mode = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Style 3"

[node name="PlayButton" type="Button" parent="SelectionPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "PLAY"
